[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
ascii_table = "4.0.2"
lazy_static = "1.4.0"
rand = "0.8.5"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
